fix layout of footer to center align column 2 and right align column 3.  edit about page

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -115,22 +115,27 @@
 }
 
 .footer-col {
-    float: left;
+    
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
 }
 
 .footer-col-1 {
+    float: left;
     width: -webkit-calc(33% - (#{$spacing-unit} / 2));
     width:         calc(33% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
+    float: left;
+    text-align: center;
     width: -webkit-calc(34% - (#{$spacing-unit} / 2));
     width:         calc(34% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
+    float: right;
+    text-align: right;
     width: -webkit-calc(33% - (#{$spacing-unit} / 2));
     width:         calc(33% - (#{$spacing-unit} / 2));
 }
